--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="pref_volume">Volume</string>
     <string name="pref_default_volume">20</string>
     <string name="action_info">Info</string>
+    <string name="info_details">Bose SoundTouch demo Alarm Clock</string>
 </resources>
